<resources>
    <string name="app_name">PruebaNativaQuadram</string>
    <string name="free">Free</string>

    <!--Botton Navigation View-->
    <string name="navigation_top_paid">Top Paid</string>
    <string name="navigation_top_free">Top Free</string>


    <!-- App Description View -->
    <string name="label_description">Description</string>
    <string name="label_category">Category</string>
    <string name="label_version">Version</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_current_version">Current Version Release Date</string>
    <string name="btn_delete_app">Delete</string>
    <string name="appDeletedBd">appDeletedBd</string>
    <string name="saveSharedPreferenceFailed">There\'s been an error deleting the app from the list</string>
    <string name="retrofit_response_error">Could not download the list of applications</string>
</resources>
