<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AppDetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtVAppName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="TextView"
                    android:textColor="@android:color/white"
                    />

                <TextView
                    android:id="@+id/txtVDeveloperName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="TextView"
                    android:textColor="@android:color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtVPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="Price"
                        android:textColor="@color/colorOrange"/>

                    <Button
                        android:id="@+id/btnDeleteApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/btn_delete_app" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorLightBlue"  />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_category"

                android:textColor="@android:color/white"
                />

            <TextView
                android:id="@+id/txtVCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="Categorytxt"

                android:textColor="@color/colorLightGrey" />

            <TextView
                android:id="@+id/lblVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_version"

                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/txtVVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="Versiontxt"

                android:textColor="@color/colorLightGrey" />

            <TextView
                android:id="@+id/lblReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_release_date"

                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/txtVReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="ReleaseDatetxt"

                android:textColor="@color/colorLightGrey"
                />

            <TextView
                android:id="@+id/lblCurrentVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_current_version"

                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/txtVCurrentVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="currentVersionTxt"

                android:textColor="@color/colorLightGrey" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorLightBlue" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/label_description"

                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/txtVDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="TextView"
                        android:background="@color/colorLightGrey"/>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>